<resources>
    <string name="app_name">SaudiSale</string>
    <string name="map_key">AIzaSyA6QI378BHt9eqBbiJKtqWHTSAZxcSwN3Q</string>

    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">Phone number</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="confirmation_code">Verification code</string>
    <string name="enter_verification_code_sent_to">Enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="user_blocked">User is blocked</string>
    <string name="name">Name</string>
    <string name="user_exist">User is exist</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="offers">Offers</string>
    <string name="chats">Chats</string>
    <string name="no_conversations_to_show">No conversations to show</string>
    <string name="add_ads">Add ads</string>
    <string name="my_ads">My Ads</string>
    <string name="favorite">Favorite</string>
    <string name="commission">Commission</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search...</string>
    <string name="sar">SAR</string>
    <string name="latest_offers">Latest offers</string>
    <string name="departments">Departments</string>
    <string name="coupons">Coupons</string>
    <string name="photo_sent">Photo sent</string>
    <string name="no_image">No image</string>
    <string name="ad_details">Ad details</string>
    <string name="price">Price</string>
    <string name="copied">Copied</string>
    <string name="ad_name">Ad name</string>
    <string name="upload_video">Upload video</string>
    <string name="ad_price">Price</string>
    <string name="address">Address</string>
    <string name="ch_types">Choose types</string>
    <string name="ch_ad_image">Choose ad images</string>
    <string name="ch_dept">Choose department</string>
    <string name="ch_sub_dept">Choose Sub department</string>
    <string name="vid_pem_denied">Video permission denied</string>
    <string name="max_ad_photo">maximum 5 photos</string>
    <string name="length_video_shouldnot_exceed">Length of video shouldn\'t exceed 59 seconds</string>
    <string name="add_offer">Add offer</string>
    <string name="price_after_offer">Price after offer</string>
    <string name="offer_value">Offer value</string>
    <string name="inv_value">Invalid value</string>
    <string name="coupon_name">Coupon name</string>
    <string name="brand_name">Brand name</string>
    <string name="coupon_code">Coupon code</string>
    <string name="coupon_date">Coupon date</string>
    <string name="show">Show</string>
    <string name="ch_image">Choose image</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="my_coupons">My Coupons</string>
    <string name="select">Select</string>
    <string name="suc">Success!</string>
    <string name="coupon_valid">Coupon valid?</string>
    <string name="already_read">Accept terms and conditions</string>
    <string name="done">Done</string>
    <string name="accept_terms">Accept terms and conditions</string>
    <string name="ad_price2">Ad price</string>
    <string name="result">Result</string>
    <string name="commission_calculator">Commission calculator</string>
    <string name="if_it_is_sold_at_a_price_of">If it is sold at a price of</string>
    <string name="the_amount_owed_to_payment_is">the amount owed to payment is</string>
    <string name="details">Details</string>
    <string name="the_site_commission">The site commission from the commodity price is 1%</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="general_settings">General Settings</string>
    <string name="change_language">Change language</string>
    <string name="next">Next</string>
    <string name="type_a_message">Type a message...</string>
    <string name="chat_us">Chat us</string>
    <string name="chat_with_admin">Chat with admin</string>
    <string name="social_media">Follow us on social media</string>
    <string name="inv_url">Invalid url</string>
    <string name="admin">Admin</string>
    <string name="update_profile">Update profile</string>
    <string name="image_uploded">image uploaded</string>
    <string name="follow">Follow</string>
    <string name="last_seen">Last seen</string>
    <string name="date_of_join">Date of join</string>
    <string name="unfollow">UnFollow</string>
    <string name="paid_once">Paid once</string>
    <string name="not_paid">Not paid</string>
    <string name="paid_more_than_one">Paid more than one</string>

</resources>