<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="lang"
            type="String" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"

            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/gray0"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"

                >

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:clickable="false"
                        android:gravity="center"
                        android:longClickable="false"
                        android:text="@string/commission"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:fitsSystemWindows="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        >
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_commision"
                            />
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="0dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:text="@string/commission_calculator"
                            />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/small_rounded_stroke_gray"
                        android:orientation="horizontal"

                        >

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="0dp" />

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:padding="3dp"
                            android:src="@drawable/ic_megaphone"
                            app:tint="@color/gray4" />

                        <EditText
                            android:id="@+id/edtPrice"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:hint="@string/ad_price2"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:singleLine="true"
                            android:inputType="numberDecimal"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray4"
                            android:textSize="14sp"

                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/gray6"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        >
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_information"
                            app:tint="@color/colorPrimary"
                            />
                        <Space
                            android:layout_width="10dp"
                            android:layout_height="0dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:text="@string/details"
                            />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="@string/the_site_commission"
                        android:textStyle="bold"
                        />
                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/small_rounded_btn_primary"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:text="@string/next"
                        />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>


    </FrameLayout>
</layout>
