<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="lang"
            type="String" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"

            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/gray0"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"

                >

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:clickable="false"
                        android:gravity="center"
                        android:longClickable="false"
                        android:text="@string/settings"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:fitsSystemWindows="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"


                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"

                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@color/gray1"
                            android:gravity="center_vertical"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/general_settings"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/llLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/change_language"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:padding="3dp"
                                android:rotation='@{lang.equals("ar")?180:0}'
                                android:src="@drawable/ic_right_arrow" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/gray3" />

                        <LinearLayout
                            android:id="@+id/llTerms"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/terms_and_conditions"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:padding="3dp"
                                android:rotation='@{lang.equals("ar")?180:0}'
                                android:src="@drawable/ic_right_arrow" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/gray3" />

                        <LinearLayout
                            android:id="@+id/llAboutApp"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_app"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <Space
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:padding="3dp"
                                android:rotation='@{lang.equals("ar")?180:0}'
                                android:src="@drawable/ic_right_arrow" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:background="@color/gray3" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </FrameLayout>
</layout>
